# WebPL

./: .gitattributes  README.md  build
.github/workflows/: core.yml  deploy.yml  docs.yml
bench/: .gitignore  build.cjs  lib.js  package.json
bench/memory/: bench.py  results.csv
bench/results/: results_250130_2318.json  results_250131_1153_chrome.json  results_250131_1203_safari.json  results_250131_2024_chrome.json  results_250131_2038_safari.json  results_250131_2254_chrome.json  results_250204_1951_chrome.json  results_250204_2222_safari.json  results_250209_1353_chrome.json  results_250312_1433_chrome.json  results_250312_1456_chrome.json
bench/suite/: chat_parser.pl  derive.pl  divide10.pl  fib.pl  log10.pl  ops8.pl  poly_10.pl  times10.pl
core/: Cargo.toml
core/benches/: nqueens.rs
core/src/: ast.rs  atom.rs  compile.rs  gc.rs  goal.rs  grammar.lalrpop  heap.rs  lib.rs  main.rs  serialize.rs  stringmap.rs  trail.rs  vararena.rs  wasm.rs
core/src/builtins/: arithmetic.rs  attributes.rs  call.rs  cmp.rs  cut.rs  is.rs  mod.rs  statistics.rs  types.rs  unify.rs
core/src/tests/: builtins.rs  core.rs  error.rs  gc.rs  lco.rs  mod.rs
core/src/wasm/: builtins.js  inline_js.rs  inline_js_handler.js  mod.rs
docs/: refs.bib
docs/dissertation/: .gitignore  01cover.tex  02declaration.tex  03proforma.tex  05introduction.tex  06preparation.tex  07implementation.tex  (+11 more)
lib/: lib.d.ts  lib.js  package-lock.json  package.json  worker.js
web/: .gitignore  benchmark.html  humphrey.conf  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json
(+63 files in other folders)
