[package]
name = "webpl"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
lalrpop-util = { version = "0.22.0", features = ["default", "lexer"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
lto = true
debug = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O4", "-g"]

[build-dependencies]
lalrpop = "0.22.0"

[dev-dependencies]
criterion = "0.5.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "nqueens"
harness = false
